--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -8,12 +8,14 @@
 
 1. In your own words, why do we use Git?
 
+    Git helps us to make different versions but also to keep track of changes that we make to our sources.
+
 2. What are the benefits of having multiple branches?
 
 3. What is the difference between Git and GitHub?
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/fs-journal)**
 
 Identify at least 1 takeaway from today's assignment
