Answers to first Journal

--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -8,11 +8,16 @@
 
 1. In your own words, why do we use Git?
 
-    Git helps us to make different versions but also to keep track of changes that we make to our sources.
+    Git helps us to make different versions but also to keep track of changes that we make to our sources of code like websites. 
+    Git also helps to host a main source where everyone who is working on the code can make changes and upload them so that anyone else working on the code can see the changes and then pull them so they can make additional changes.
 
 2. What are the benefits of having multiple branches?
 
+    Having multiple branches helps to create multiple versions of the code that can then branch into different versions of the code such as creating a test branch that developers can work in to test out different features and changes without making direct changes to the main branch of code in case someone wants to try a potentially breaking code but does not want to sacrifice the integrity of the main code. 
+
 3. What is the difference between Git and GitHub?
+
+    GitHub as compared to Git is the actual website where repositories are made and stored so that other developers can access the different sources and sheets that an initial developer uploads to the repository. Other developers can then pull those sheets and items down from the remote repository into their local storage so that they can work on them and make changes which later will be uploaded to the remote repository.
 
 ## Afternoon Assignment Link
 
