Finished Takeaway section

--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -24,3 +24,5 @@
 **[Repo](https://github.com/jsphbowers/fs-journal)**
 
 Identify at least 1 takeaway from today's assignment
+
+Today's assignment was helpful in that I learned a little more about how to create branches and how they can be useful in making different branches of code where I can have the "nice shiny" version that I keep live and posted so that friends and family can see it and then the "sandbox/ work in progress space" where I can make changes and create errors that wont necessarily be posted live to the public. 
