Week 1 Day 2 Journal updated

--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -8,12 +8,20 @@
 
 1. What is a ***pseudo-class*** and what are some of the most common ones you think you will use?
 
+A pseudo-class is a class where you first reference an initial identifier and then another additional part of it as well. I think the most common ones will probably be hover and before and after. 
+
 2. What is ***specificity*** and how might you use it to your benefit?
+
+Specificity determines which rule used in CSS will run when compared to the others. If an element has 4 different css styling rules that it has associated with it. CSS will determine which one has the highest specificity and then run that color. This can be useful if you want to color specific items within a group of items that you have already styled such as an element that has an ID tag you might want to change. You can target the ID tag to change the color of the one item without changing the color of all the same items that have the same class listed for all of them.
 
 3. What problems do you think you could run into if you over-utilized the `!important` feature?
 
+If you over utilize the important tag you can start to make changes really difficult where it can then become a hassle to go back through and try to change things. Instead of being able to change multiple things at once you can get frustrated trying to change things and nothing is happening. 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/coolsite)**
 
 Identify at least 1 takeaway from today's assignment
+
+Learning how to use flex in css was a huge game changer where it helped a lot to get objects and items to move the way you wanted rather than creating individual inputs for each and every item. Also learning to use paint as a starting place and creating preliminary borders to help identify the initial "bones" of the project was really helpful.
