Clone site and Journal entry week 1 day 3

--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -8,12 +8,23 @@
 
 1. What is your favorite tip for improving your design? How does it benefit your site?
 
+My favorite tip for improving design is using simple borders to add to a design where you might color one side of a border. I think it can help make a bland card or text pop and really give it nice emphasis.
+
 2. Compile a couple of resources that you think might be helpful when trying to review examples of good design ideas.
+
+Dribble seems like a great source for choosing color pallettes which I think oftentimes can be daunting.
+
+Font Awesome seems like an awesome sight to find different icons and animations that can be really useful while building a website where you want to have good looking icons.
+
+Material Design seems like a very helpful website that has a lot of information that can be read to help with design ideas and to improve current designs to make them better.
 
 3. How do you think good design influences people when visiting a website, and what sorts of things could you convey through design alone?
 
+Good design influences people in a positive manner where it can communicate authenticity and help people feel secure when they are visiting a website. If a web page looks really janky, it can lead visitors or customers to believe that the site is unsafe or untrustworthy. Design alone can communicate a sense of trust and even levels of comfort to users.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/clone-site)**
 
 Identify at least 1 takeaway from today's assignment
+
