Journal entry for day 4 week 1

--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of ***wireframing***? 
 
+Wireframing is super helpful stage in the creation process of building a website or other products a web developer would be working on. It is helpful in that you can get a lot of feedback from clients or other people who you are building the website for and it is an early stage of creation so making changes is cheap and easy.
+
 2. What are the different levels of detail in wireframes, and why is each one useful?
+
+low, mid and high fidelity wireframes are all uniquely useful in that low fidelity are cheap and easy and can be created on the spot, helping a developer to mock up a webpage quickly. mid fidelity helps to really give a client a clearer idea of what the details of all the pieces might start to look like and then high fidelity is basically the last step before actual coding and production.
 
 3. Do you think wireframes are worth the time, energy, and effort that they require? Why or Why not?
 
+Yes, I think wireframes are hugely useful especially for when you are just concepting ideas for a webpage. They are quick and easy and they do not cost nearly any time or money to create rather than building a whole webpage and then finding out the design you went with is nothing like what the client wanted.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/Alexmquan/clonesite_2.23.2023)**
 
 Identify at least 1 takeaway from today's assignment
+
+I learned a lot about bootstrap and using Figma to initially create the site helped a lot to help show how to develop hte site and then build it in code helps a lot for converting ideas into reality.
