Week 1 Friday journal entry

--- a/reflections/week01/05.md
+++ b/reflections/week01/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+This week I think I have really gained a better grasp about the fundamentals and the base level of coding using html and css. I obviously used these programs before the course when doing the pre-course work but actually sitting down and grinding through the process I feel much more confident in how to mock up and then build out a basic website. It may not have functionality yet but I feel confident in my understanding of what html and css do and how I can manipulate them. That being said I do feel like i have just scratched the surface of what is out there and the possibilities of what I can do with the two forms.
+
 - What did you learn that was a shock or surprise?
+
+Learning about Figma was a huge help for me. That and bootstrap combined really helped me to understand how you can go from a simple blank page to something that can be framed out and then filled in. It is awesome to see how far we have brought this technology and I am so grateful for the people who have put in the work to make it so much easier for me.
+
 - What are you struggling with?
+
+Manipulation of bootstrap, specifically how to bring things from the top of a column down to the center is actually a big struggle for me. It makes me laugh but that is probably the most specific thing that gives me trouble. I then found out that bootstrap actually disables the "align items" function when you are trying to manipulate objects. There may be another way that they do it but for now I have simply switched these situations to a d-flex and that seems to help.
+
 - What would you count as a victory?
+
+I think this checkpoint has already been a victory in itself because I am not looking at a screen and having no idea how to go about creating something. Instead I feel I actually planned it out, started with the bare bones containers, rows and columns and then filled in the content and the path has been very satisfying.
