Week 2 Day 1 journal entry

--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -8,9 +8,19 @@
 
 1. What is ***scope***?
 
+Scope is the area that a variable is functional within. So if a variable is called outside of it's scope it will return an error. Var variables are globally declared whereas const and let have scopes that are block based.
+
 2. What is ***Hoisting***?
 
+Hoisting is where variables are "hoisted" to the top of a function or a block of code before they are run. All three variables are hoisted to the top of a block of code but each has a different way they are then initialized and interpreted. 
+
 3. In what cases might you use `let` vs. `const` vs. `var`?
+
+Let is a good variable to use when you want to ensure that you are not running duplicate variables or if you want to declare variables but still be able to manipulate them throughout the code.
+
+Const is useful when you need a variable to be unchangeable throughout the coding process and when you want to make sure something stays constant even for users.
+
+Var is useful for declaring variables that you want to have access to on a global scale throughout the code even within blocks of code.
 
 ## Afternoon Assignment Link
 
