Week 2 Day 2 Journal init entry

--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -8,9 +8,19 @@
 
 1. What are the three ways to syntactically write a function? What are the differences in how the function acts (if any)?
 
+Function Declaration: this function is hoisted so you do not have do define it before it can be used.
+
+Function Expressions: this function has to be defined before it can be used because it is typically attached to a variable or another piece of code.
+
+Arrow Functions: These functions are much shorter syntactically and do not create their own "this" value.
+
 2. What is the main difference between ***parameters*** and ***arguments***?
 
+Parameters are the rules that a function has set where information can be passed into a function when it is called so that it will use those parameters as arguments when the function is ran. The parameter is the rule of the function while the argument is the input that the parameter creates.
+
 3. What are ***higher-order functions***? Can you provide an example?
+
+Higher-order functions are functions that when called typically call another function. It is like the inception of functions. A typical example of this is an array or when iterating through an array.
 
 ## Afternoon Assignment Link
 
