Week 2 Day 3 journal started

--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -8,9 +8,15 @@
 
 1. What are the main ways to write information to the console? Why/when should you use each style?
 
+
+
 2. Which tab allows you to see the breakdown of HTML/CSS, and how can this tab be useful when debugging HTML?
 
+The elements tab allows you to see the HTML and CSS which can be super helpful for debugging HTML. It also allows you to make changes on the spot so you can see the changes instantly and then copy those changes over into your code rather than having to use trial and error with your code.
+
 3. Instead of writing everything to the console, what is a better way to debug your code?
+
+
 
 ## Afternoon Assignment Link
 
