week 2 day 1 upload scoreboard

--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -24,6 +24,6 @@ Var is useful for declaring variables that you want to have access to on a globa
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/scoreboard)**
 
 Identify at least 1 takeaway from today's assignment
