Finished Journals for week 2 days mon-thurs

--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -27,3 +27,5 @@ Var is useful for declaring variables that you want to have access to on a globa
 **[Repo](https://github.com/jsphbowers/scoreboard)**
 
 Identify at least 1 takeaway from today's assignment
+
+Making the scoreboard really helped solidify some core concepts on JavaScript. It also helped show how even with a little html you can still do a lot on a webpage.
