--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -24,6 +24,8 @@ Higher-order functions are functions that when called typically call another fun
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/warehouse)**
 
 Identify at least 1 takeaway from today's assignment
+
+This assignment really helped me to push my JavaScript to the next level when it came to iterating through arrays and using different return methods. It was good to really practice and get a good grasp on how to return the information you wanted.
