--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -8,7 +8,7 @@
 
 1. What are the main ways to write information to the console? Why/when should you use each style?
 
-
+console.log() is one of the primary ways to print to the console. There is also console.error(error.message). Printing to the console can be very helpful when trying to figure out problems in your code or also to evaluate what information your program is moving around in Java Script. It can help to understand what next steps to take in a project and how to make things function well.
 
 2. Which tab allows you to see the breakdown of HTML/CSS, and how can this tab be useful when debugging HTML?
 
@@ -16,10 +16,12 @@ The elements tab allows you to see the HTML and CSS which can be super helpful f
 
 3. Instead of writing everything to the console, what is a better way to debug your code?
 
-
+Using the debugger that is built into Java Script and also using the inspect tool built into google chrome is super helpful for debugging. It can really help with stepping through a function and seeing exactly where the disconnect is and you can make edits right there in the browser and then copy those changes over into your actual code.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/icecream)**
 
 Identify at least 1 takeaway from today's assignment
+
+The ice cream shop really helped me to solidify some principles when it came to writing information to the page through templates and using javascript. It also helped me to learn some strategies when dealing with a lot of HTML and how to keep things organized so you don't get lost in the weeds.
