--- a/reflections/week02/04.md
+++ b/reflections/week02/04.md
@@ -8,12 +8,20 @@
 
 1. What are the benefits of making a plan for your application before starting to write the code?
 
+Making a plan before you start to write can help you to produce higher quality code. It is important to note that there is such a thing as too little planning and too much planning! "Waterfall" plans are apparently really bad for writing code according to this author. It sounds a lot like murphys law, where as soon as you get going the plan changes and goes in all sorts of directions. 
+
 2. How do you find answers when you are stuck?
+
+There are a lot of different approaches for this. For me it can be as simple as starting with google. Seeing if someone else has had the same problem and if their answer makes sense to me. Then it becomes a question of do I have someone in person who i can call or talk to and then from there seeking the advice of a professional. 
 
 3. What coding mistakes would you be most likely to make? What advice from this article do you find most helpful?
 
+I think this article is helpful in a lot of ways in giving an idea of how to keep things clear and concise. I think some mistakes I might make are building too much and not having the computer test for me and test often. I also think I will struggle with either finding applications that I think will help or getting stuck in wanting to use the same tools for everything and not using new things that are available to me.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/IsaacDuff/BossMonster)**
 
 Identify at least 1 takeaway from today's assignment
+
+This lesson was huge in learning how to really bring a lot of Java Script together. I also learned today how to use getScript tags which can be helpful for making things a little faster. I also learned how using multiple functions within other functions can be ver useful but also can get really confusing when you have a lot of "incepted" functions.
