--- a/reflections/week02/05.md
+++ b/reflections/week02/05.md
@@ -7,3 +7,8 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+
+I think this week went pretty well overall. I think it was helpful having been exposed to and struggled with javascript before the course with the pre-work. This has made me nervous for the weeks ahead as we will now be getting into concepts that I have never been exposed to.
+
+I think writing functions and the logic of making hte functions is pretty clear to me. I do think that querys and how and when to use them was a little bit lost on me as I did not really see the benefit to generating them but it might have been that I did not have the right code in my project to make much use of them.
