Week 3 day 1 journal

--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -8,9 +8,15 @@
 
 1. What problem does using ***exports*** solve?
 
+Export can help in keeping code separated into different segments to help alleviate the work load of modules. You can also concatenate modules to help with functionality.
+
 2. How does `export` differ from `export default`?
 
+Exporting default has to be met with import default otherwise there will be an error. Export also allows you to export the individual modules that you want from the js script where you can even export just one function if you want to.
+
 3. What is a benefit of using the "module" system?
+
+Module system lets you separate out your code to help systems not get bogged down and it can be helpful if you want to only use certain segments from other codes rather than importing or rewriting the entire java into your current project.
 
 ## Afternoon Assignment Link
 
