Started Week 3 day 2 journal

--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -8,6 +8,8 @@
 
 1. What is the purpose of ***Encapsulation***?
 
+Encapsulation helps keep data separated not only for developers to make editing and using the data easier but also to make sure that users cannot manipulate and mess with the data that they should not have access to.
+
 2. What were some of the problems with ***closures*** and the ***underscore prefix*** convention?
 
 3. How do we create private variables in an ES6 `Class`? Why would you do this?
@@ -17,3 +19,5 @@
 **[Repo](https://github.com/jsphbowers/game-night)**
 
 Identify at least 1 takeaway from today's assignment
+
+
