Week 3 day 1 & 2 journals

--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -20,6 +20,6 @@ Module system lets you separate out your code to help systems not get bogged dow
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/game-night)**
 
 Identify at least 1 takeaway from today's assignment
