Week 3 day 1 and 2 journals complete

--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -23,3 +23,5 @@ Module system lets you separate out your code to help systems not get bogged dow
 **[Repo](https://github.com/jsphbowers/game-night)**
 
 Identify at least 1 takeaway from today's assignment
+
+Learning how to use the new system was a lot but practicing and putting in time using the different files helps to reinforce how it works.
