--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -12,12 +12,20 @@ Encapsulation helps keep data separated not only for developers to make editing 
 
 2. What were some of the problems with ***closures*** and the ***underscore prefix*** convention?
 
+Closures van have access to them by people using a privileged method to gain access to supposedly closed functions.
+
+Underscore prefix would lead to a lot of people breaking the convention where experienced developers would use it but in reality it would break the code for people who were not aware. So in the end users who were not aware would use the function and cause them to not be private anymore.
+
 3. How do we create private variables in an ES6 `Class`? Why would you do this?
+
+Putting your variables within a constructor inside of a class is one way to ensure that the variables are private.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/jsphbowers/vending-machine)**
 
 Identify at least 1 takeaway from today's assignment
+
+Using the new system does seem complicated at first but it actually adds some nice functionality where it is actually easier to use because things are automatically updated and putting something into the stream of information it is automatically picked up and implemented which is nice.
 
 
