Week 3 Day 3&4 journals

--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -8,12 +8,18 @@
 
 1. What are the two common operations that we will set in the ***handler***?
 
+Get and set are very common
+
 2. What do you have to make sure you are doing with every `get` to ensure the value does not become `undefined`?
+
+for the get, you also need to make sure you have an obj to go with it and the prop you want to initiate.
 
 3. What are some of the benefits of the `Proxy` object that we are using in our structure for applications?
 
+With the proxy we can set up traps and other logic that proxies can help us with to limit accessibility for users and also trigger other functions by using an inbetween argument.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/spring23-mvcGregslist)**
 
-Identify at least 1 takeaway from today's assignment
+This was a great assignment to help with reinforcing how MVC works and getting down how you can create multiple pages and information being set to the screen for the user.
