--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -8,12 +8,20 @@
 
 1. What problems does the ***observer pattern*** seek to solve?
 
+The observer pattern seeks to solve the issue of having a bunch of moving parts that are all sending data and need to stay in sync so that when an event happens all different parts of the application update and resolve whatever the event, typically from a user, changes.
+
 2. What are the three mechanisms of the observer pattern?
+
+Subscribe, unsubscribe, broadcast
 
 3. Review the code generated from the bcw-template, and reflect on the `Proxy` objects from yesterday and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the DOM.
 
+This program keeps a listener where it gets the input that is put in by the user and then runs it through a couple different segments that then creates the actual world count and then sends it back to the user through the use of the display.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/PeytonCurr/fruitSalad)**
 
 Identify at least 1 takeaway from today's assignment
+
+Working together in a group does feel like you really have a lot more knowledge to share and use on the project but overall it was really helpful and I think it showed us how far we've come from the beginning of the week.
