--- a/reflections/week03/05.md
+++ b/reflections/week03/05.md
@@ -7,3 +7,5 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+Working on the checkpoint i've realized now that I need to really check the console and test all aspects. Pushing the code to break would have maybe helped me get that duck.
