--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -14,6 +14,8 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/Trivia)**
 
 Identify at least 1 takeaway from today's assignment
+
+Learning the different methods of linking up an API can be very helpful for writing code and getting information rather than generating ideas and objects/arrays based on your knowledge alone. It does seem a little concerning how broken some if not a lot of API software is.
