Finished week 4 day 1 journal

--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -8,9 +8,19 @@
 
 1. What are some of the signs and causes of 'callback hell'?
 
+One of the signs of callback hell is if you notice a lot of curly brackets and other brackets starting to stack up at the bottom of your code forming a large pyramid.
+
+Nesting code is also a good indicator that you are on the path to firey code.
+
 2. What does ***asynchronous*** mean, and how are callbacks involved?
 
+Asynchronous is a term for when code will be executed in the future. The rest of the program continues to run but async code is typically being sent off to get something and come back when the download or code is finished.
+
 3. Summarize the 3 ways to avoid/fix 'callback hell.'
+
+Hoisting functions is useful because it helps to avoid nesting code and helps us to set up code that is easier to navigate.
+Modularize is a way of using reausable code over and over and setting it apart so it is again more divided and easier to work with.
+Handling every error is a method where we handle errors and even plan for ones that could be coming.
 
 ## Afternoon Assignment Link
 
