Week 4 Quiz complete

--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/LemonadeGT1/gifted)**
 
 Identify at least 1 takeaway from today's assignment
