Week 4 day 2 journal

--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -8,12 +8,20 @@
 
 1. What are the three states of a `Promise`?
 
+Pending, resolved, rejected
+
 2. How do `Promise`s seek to resolve the issues of 'callback hell'?
+
+Promises can be used to chain functions together rather than using callbacks which can stack and create a "callback hell" situation where you have to account for each and every function and give them all the same response rather than just having one logical function that flows through all of them.
 
 3. What is the difference between `.then()` and `.catch()`?
 
+.then() is the response when a promise is "kept" or successful in getting the information desired so when it returns "then 😉" we run the function. A .catch() is used for the opposite where because the information came back incorrect then we run the error that we received from the promise being broken.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/spring23-asyncGregslist)**
 
 Identify at least 1 takeaway from today's assignment
+
+Using the async concept and MVC this week was much smoother and I felt I had a better understanding of how the files work together.
