Week 4 day 3 journal

--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of `async`/`await`?
 
+An async function returns a promise. They were developed to make callback functions appear more synchronus even though they are asynchronus. The main purpose was to make the syntax of block functions easier to handle and manipulate.
+
 2. What must you do in order to `await` a promise inside of a function?
+
+Prepending the async keyword in front of a function will make it return a promise. 
 
 3. What are some of the primary benefits of `async`/`await`?
 
+Some of the benefits are it can be easier to read, you can link a couple of the functions together more easily and it makes debugging much simpler.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/Pokedex)**
 
 Identify at least 1 takeaway from today's assignment
+
+Learning how to access an Api and then take that information and post it in your own database to save was super helpful to see the functionality and the benefit of APIs.
