Week 4 Day 4 Journal

--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -8,12 +8,20 @@
 
 1. What does ***REST*** stand for, and in simple terms what does it mean?
 
+Representational State Transfer, in simple terms this means that the when you send a request they will then send back a representation of that user. The server will process the request and then return the current "state" or representation of that user.
+
 2. What does ***stateless*** mean?
 
+Stateless is when an API requires all of the information per every request as it does not save any of the information sent by a user in previous requests. It does not track any information.
+
 3. What URL pattern is used when writing a ***RESTful API***?
+
+A RESTful API needs an endpoint URL in order to function.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/LemonadeGT1/gifted)**
 
 Identify at least 1 takeaway from today's assignment
+
+Learning how to send a request to an API and then have the information come back is very helpful to see in action how it can become useful to developers.
