Week 4 Day 5 finished

--- a/reflections/week04/05.md
+++ b/reflections/week04/05.md
@@ -7,3 +7,14 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+
+Working with APIs this week has been very interesting. It makes me wonder who gathers all this information that the API can distribute to us. It also explains how there are so many broken APIs like the one we used for the harry Potter Characters.
+
+This is the first week that feels like it all has been coming together in our web development. The final picture is starting to take form, and while it is very complicated it is interesting and exciting to me at the same time.
+
+I really enjoyed our lectures with Zach on Scrum, I think getting an idea of how the workplace will be set up can be very helpful for us.
+
+I have been struggling with the morning challenges that are supposed to help us get going in the morning. I find a lot of times it feels like I haven't covered the subject and or don't understand how to approach the challenge, which, I understand is probably the point of the challenge but it also is a little frustrating to me.
+
+I think that the first part of me working with the checkpoint was definitely a victory. Finishing the To Do list was a lot of fun and I felt that a lot of it was coming together.
