Week 5 day 1 journal

--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -8,9 +8,15 @@
 
 1. What is the purpose of a ***query string***?
 
+A query sting is used to append information to the end of a URL which in turn will pass the query to the server that we are talking to.
+
 2. What is the format of a ***query parameter***? How does it start? How do you distinguish between one parameter and the next?
 
+A query parameter starts by adding a '?'to the end of a url and then parameters are listed as a=1 or this=anotherobject, if we want to append multiple queries we can put a '&' between them to link them together. like ?a=1&this=anotherobject
+
 3. When do you think query parameters would be helpful when writing your server?
+
+Query parameters would be helpful for guiding users to certain pages of information or passing information to the server for storage.
 
 ## Afternoon Assignment Link
 
