Week 5 day 2 journal

--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -8,9 +8,15 @@
 
 1. What are the three types of data relationships?
 
+The one to one relationship (1:1), the one to many (1:N), and the many to many (N:M) are the three types of relationships.
+
 2. What are the benefits of traditional ***linking*** relationships over ***embedding*** relationships?
 
+Linking relationships can be useful in that they remove the possibility of overloading our pages with more than 16mb of data. It also can be useful for breaking down our information into retrievable buckets that we can access to make the data more broken up.
+
 3. When modeling data, it's important to consider how a user will use and filter that data. How does this affect the way you model a ***many-to-many*** relationship? 
+
+When modeling a many-to-many relationship it is important to note how we can overload the system depending on how we have broken down our categories and then to consider a one to many or many to many because many to many can make it easier for us to send data back and forth between the user and the server.
 
 ## Afternoon Assignment Link
 
