week 5 day 3 Journal

--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -7,9 +7,19 @@
 
 1. In simple terms what is ***timeboxing***?
 
+Timeboxing is taking tasks or breaking a project down into tasks and then allotting specific time to work on those tasks where you have a box of time to complete them and you commit to keeping the time you work on them within that timeframe trying not to go over or under that alloted time.
+
 2. What three strategies will you implement and how?
 
+I think i might try using the 2 minute timing strategy to help me understand just what I can get done in 2 minutes. I think it could be really helpful
+
+I am going to try using the pomodoro method for working on tasks. I think 25 minutes is really a good window for working on projects and it helps to reinforce the taking breaks principle. I got the focus booster app to see if it helps me.
+
+I want to try implementing this strategy with projects I want to get done around the house. I am good at making myself a todo list for when I have free time to get things done but it has become harder to stick to that list when I have not alloted time to work on some of those projects.
+
 3. Give an example of when you would have benefitted from timeboxing and how? 
+
+I think breaking down larger projects in school especially college would have helped me to understand just how much time I had and when I needed to be using it.
 
 ## Afternoon Assignment Link
 
