Week 5 Day 4 Journal

--- a/reflections/week05/04.md
+++ b/reflections/week05/04.md
@@ -8,9 +8,15 @@
 
 1. What is a ***virtual property***?
 
+Virtual properties are additional fields for a given model. They do not persist through the database but are rather logical properties that are used for collecting data.
+
 2. When might you use a virtual property? 
 
+You would use a virtual property for when you want to avoid using concatenation repeatedly or if you want to get data from information given by the user and break it down into its parts that you need.
+
 3. How do you search by a virtual property's value?
+
+You can use the 'get' method to search and return values using virtual properties.
 
 ## Afternoon Assignment Link
 
