Updated week 5 journals

--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -20,6 +20,8 @@ Query parameters would be helpful for guiding users to certain pages of informat
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/Sammie-Burgers)**
 
 Identify at least 1 takeaway from today's assignment
+
+Learning how to get the servers set up was really helpful. Getting in the practice really helped to make things flow smoothly.
