--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -20,6 +20,8 @@ When modeling a many-to-many relationship it is important to note how we can ove
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/spring23_gregslistNode)**
 
 Identify at least 1 takeaway from today's assignment
+
+Doing the gregslist to help do repetition was really helpful to solidify how to set up the servers and make them function smoothly.
