--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -23,6 +23,8 @@ I think breaking down larger projects in school especially college would have he
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/jsphbowers/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/jsphbowers/Planets)**
 
 Identify at least 1 takeaway from today's assignment
+
+Understanding how the server communicates and reaches the different layers of the server was really helpful and showed the versatility and the importance of coding defensively.
