quiz and week 5 day 5 journal

--- a/reflections/week05/05.md
+++ b/reflections/week05/05.md
@@ -6,3 +6,6 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 - What did you learn that was a shock or surprise?
 - What are you struggling with?
 - What would you count as a victory?
+
+
+This week was HACKATHON! which was a ton of fun! It was cool seeing what its like to work in a group. While you have a lot more brains and eyes working on the same project which can be helpful it also can make things feel like they're moving a lot slower. We ultimately got a lot done with the project which was awesome and it was fun all coming together to finish something.
